<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.appitup.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_trending"
        android:name="com.example.appitup.fragments.TrendingFragment"
        android:label="@string/trending"
        tools:layout="@layout/fragment_trending" />

    <fragment
        android:id="@+id/nav_status"
        android:name="com.example.appitup.fragments.StatusFragment"
        android:label="@string/status"
        tools:layout="@layout/fragment_status" />

    <fragment
        android:id="@+id/nav_user_account"
        android:name="com.example.appitup.fragments.UserAccountFragment"
        android:label="@string/user_account"
        tools:layout="@layout/fragment_user_account" />

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.example.appitup.fragments.AboutUsFragment"
        android:label="@string/about_us"
        tools:layout="@layout/fragment_aboutus" />

    <fragment
        android:id="@+id/nav_faq_help"
        android:name="com.example.appitup.fragments.FAQorHelpFragment"
        android:label="@string/faq_help"
        tools:layout="@layout/fragment_faq_hlp" />
</navigation>